# ARC-TCMS

./: .gitignore  alembic.ini  import_carplay.py  pyproject.toml  render.yaml  requirements.txt  seed.py  start_public.bat  start_server.bat  tmp_cases.json
alembic/: env.py
alembic/versions/: 9dd4cf49589d_initial_创建用例_计划_关联表.py
app/: auth.py  config.py  database.py  main.py  templates.py
app/models/: __init__.py  test_case.py  test_plan.py  test_plan_item.py  user.py
app/routers/: auth.py  import_export.py  test_cases.py  test_plan_items.py  test_plans.py
app/schemas/: test_case.py  test_plan.py  test_plan_item.py
app/services/: import_export_service.py  test_case_service.py  test_plan_service.py
app/static/css/: app.css
app/templates/: base.html
app/templates/pages/: dashboard.html
app/templates/pages/auth/: login.html  register.html
app/templates/pages/import_export/: index.html
app/templates/pages/test_cases/: detail.html  form.html  list.html
app/templates/pages/test_plans/: detail.html  edit.html  execute.html  form.html  list.html
tests/: conftest.py  test_test_cases.py
